<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/btn_fund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bb_support_btn" />
    
    <TextView 
        android:id="@+id/tv_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:visibility="gone"
        android:text="@string/bb_support_fund"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bb_support_feedback" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/bb_support_feedback_descp" />

</LinearLayout>